version/0.1/_sources/api/ansys/speos/core/workflow/combine_speos/SpeosFileInstance.rst.txt






:class:`SpeosFileInstance`
==========================

.. py:class:: ansys.speos.core.workflow.combine_speos.SpeosFileInstance(speos_file, axis_system = None, name = '')

   
   Represents a speos file that is placed and oriented in a specific way


   :Parameters:

       **speos_file** : :class:`python:str`
           Speos file to be loaded.

       **axis_system** : :obj:`Optional`\[:obj:`List`\[:class:`python:float`]]
           Location and orientation wished for speos file, [Ox Oy Oz Xx Xy Xz Yx Yy Yz Zx Zy Zz].
           By default, ``[0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1]``.

       **name** : :class:`python:str`
           Name chosen, this name will be used as sub part name in the root part feature of the project.
           By default, ``""``, empty means that the name from speos_file basename without extension will be taken.














   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SpeosFileInstance

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~speos_file`
            - Speos file.
          * - :py:attr:`~axis_system`
            - Location/Orientation wished for speos file.
          * - :py:attr:`~name`
            - Name for the entity (speos file + location/orientation).






Import detail
-------------

.. code-block:: python

    from ansys.speos.core.workflow.combine_speos import SpeosFileInstance


Attribute detail
----------------

.. py:attribute:: speos_file

   
   Speos file.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: axis_system
   :value: None


   
   Location/Orientation wished for speos file.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: name
   :value: ''


   
   Name for the entity (speos file + location/orientation).
















   ..
       !! processed by numpydoc !!





